@@ -34,50 +34,28 @@
 //  
 //////////////////////////////////////////////////////////////////////////
 
-#ifndef GAFFERSCENE_PATHFILTER_H
-#define GAFFERSCENE_PATHFILTER_H
-
-#include "boost/regex.hpp"
-
-#include "Gaffer/TypedObjectPlug.h"
-
-#include "GafferScene/Filter.h"
-#include "GafferScene/PathMatcher.h"
+#ifndef GAFFER_PATHMATCHER_INL
+#define GAFFER_PATHMATCHER_INL
 
 namespace GafferScene
 {
 
-/// \todo Support glob style expressions and regular expressions.
-class PathFilter : public Filter
+template<typename Iterator>
+PathMatcher::PathMatcher( Iterator pathsBegin, Iterator pathsEnd )
 {
-
-	public :
-
-		IE_CORE_DECLARERUNTIMETYPEDEXTENSION( PathFilter, PathFilterTypeId, Filter );
-
-		PathFilter( const std::string &name=staticTypeName() );
-		virtual ~PathFilter();
+	init( pathsBegin, pathsEnd );
+}
 		
-		Gaffer::StringVectorDataPlug *pathsPlug();
-		const Gaffer::StringVectorDataPlug *pathsPlug() const;
-				
-		virtual void affects( const Gaffer::ValuePlug *input, AffectedPlugsContainer &outputs ) const;
-
-	protected :
-
-		virtual void hashMatch( const Gaffer::Context *context, IECore::MurmurHash &h ) const;
-		virtual Result computeMatch( const Gaffer::Context *context ) const;
-
-	private :
-	
-		void plugSet( Gaffer::Plug *plug );
-	
-		PathMatcher m_matcher;
-	
-		static size_t g_firstPlugIndex;
-
-};
+template<typename Iterator>
+void PathMatcher::init( Iterator pathsBegin, Iterator pathsEnd )
+{
+	clear();
+	for( Iterator it = pathsBegin; it != pathsEnd; it++ )
+	{
+		addPath( *it );
+	}
+}			
 
 } // namespace GafferScene
 
-#endif // GAFFERSCENE_PATHFILTER_H
+#endif // GAFFER_PATHMATCHER_INL
