@@ -34,50 +34,41 @@
 //  
 //////////////////////////////////////////////////////////////////////////
 
-#ifndef GAFFERSCENE_PATHFILTER_H
-#define GAFFERSCENE_PATHFILTER_H
+#include "boost/python.hpp"
+#include "boost/python/suite/indexing/container_utils.hpp"
 
-#include "boost/regex.hpp"
+#include "IECore/VectorTypedData.h"
 
-#include "Gaffer/TypedObjectPlug.h"
-
-#include "GafferScene/Filter.h"
 #include "GafferScene/PathMatcher.h"
 
-namespace GafferScene
+#include "GafferSceneBindings/PathMatcherBinding.h"
+
+using namespace boost::python;
+using namespace GafferSceneBindings;
+using namespace GafferScene;
+
+namespace GafferSceneBindings
 {
 
-/// \todo Support glob style expressions and regular expressions.
-class PathFilter : public Filter
+static PathMatcher *constructFromObject( boost::python::object oPaths )
 {
+	std::vector<std::string> paths;
+	container_utils::extend_container( paths, oPaths );
+	return new PathMatcher( paths.begin(), paths.end() );
+}
 
-	public :
+static PathMatcher *constructFromVectorData( IECore::ConstStringVectorDataPtr paths )
+{
+	return new PathMatcher( paths->readable().begin(), paths->readable().end() );
+}
 
-		IE_CORE_DECLARERUNTIMETYPEDEXTENSION( PathFilter, PathFilterTypeId, Filter );
+void bindPathMatcher()
+{
+	class_<PathMatcher>( "PathMatcher" )
+		.def( "__init__", make_constructor( constructFromObject ) )
+		.def( "__init__", make_constructor( constructFromVectorData ) )
+		.def( "match", &PathMatcher::match )
+	;
+}
 
-		PathFilter( const std::string &name=staticTypeName() );
-		virtual ~PathFilter();
-		
-		Gaffer::StringVectorDataPlug *pathsPlug();
-		const Gaffer::StringVectorDataPlug *pathsPlug() const;
-				
-		virtual void affects( const Gaffer::ValuePlug *input, AffectedPlugsContainer &outputs ) const;
-
-	protected :
-
-		virtual void hashMatch( const Gaffer::Context *context, IECore::MurmurHash &h ) const;
-		virtual Result computeMatch( const Gaffer::Context *context ) const;
-
-	private :
-	
-		void plugSet( Gaffer::Plug *plug );
-	
-		PathMatcher m_matcher;
-	
-		static size_t g_firstPlugIndex;
-
-};
-
-} // namespace GafferScene
-
-#endif // GAFFERSCENE_PATHFILTER_H
+} // namespace GafferSceneBindings
